[package]
name = "sshkit"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

[dependencies]
rexpect = "0.4"
clap = "3.0.0-beta.2"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
users = "0.11.0"
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"

[[bin]]
name = "sshkit"
path = "src/main.rs"
